Fix PostgreSQL JDBC URL format for Render deployment

--- a/backend/.env.render.postgresql
+++ b/backend/.env.render.postgresql
@@ -8,9 +8,14 @@
 # DATABASE CONFIGURATION
 # ================================
 # PRODUCTION: Render PostgreSQL Database
-# Get the Internal Database URL from Render Dashboard after creating PostgreSQL database
-# Format: postgresql://user:password@host:5432/database_name
-DATABASE_URL=postgresql://postgres:baNNYGwXLgEgt4747PuPHoV9Ng68CTnd@dpg-xxxxxx.render.com:5432/fascinito_pos
+# IMPORTANT: Spring Boot requires JDBC format (starts with 'jdbc:')
+# Render provides URL starting with 'postgresql://' - you must add 'jdbc:' prefix
+
+# Option 1: Use JDBC_DATABASE_URL (recommended)
+JDBC_DATABASE_URL=jdbc:postgresql://postgres:baNNYGwXLgEgt4747PuPHoV9Ng68CTnd@dpg-d4ve0our433s73e47li0-a.singapore-postgres.render.com:5432/fascinito_pos
+
+# Option 2: Or use DATABASE_URL with jdbc: prefix
+# DATABASE_URL=jdbc:postgresql://postgres:baNNYGwXLgEgt4747PuPHoV9Ng68CTnd@dpg-xxxxx.render.com:5432/fascinito_pos
 
 # IMPORTANT: Set PostgreSQL dialect for production
 HIBERNATE_DIALECT=org.hibernate.dialect.PostgreSQLDialect
