--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -15,10 +15,11 @@ spring:
       static-locations: file:${UPLOAD_BASE_PATH:uploads}/,classpath:/static/
 
   datasource:
-    # Production (Render): Use JDBC_DATABASE_URL for PostgreSQL  
+    # Production (Render): Use JDBC_DATABASE_URL for PostgreSQL (includes username/password in URL)
     # Local: Use MySQL with individual environment variables
-    # Note: Render's DATABASE_URL needs to be prefixed with 'jdbc:' 
-    url: ${JDBC_DATABASE_URL:${DATABASE_URL:jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME:pos_db}?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC}}
+    url: ${JDBC_DATABASE_URL:jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME:pos_db}?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC}
+    # Note: For PostgreSQL (JDBC_DATABASE_URL), username and password are in the URL
+    # For MySQL (local), use separate username/password
     username: ${DB_USER:root}
     password: ${DB_PASSWORD:password}
   
