--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -38,6 +38,24 @@ spring:
       write-dates-as-timestamps: false
     time-zone: UTC
 
+  # Email Configuration for Hostinger
+  mail:
+    host: ${MAIL_HOST:smtp.hostinger.com}
+    port: ${MAIL_PORT:465}
+    username: ${MAIL_USERNAME:support@fascinito.in}
+    password: ${MAIL_PASSWORD:Fascinito123!}
+    from: ${MAIL_FROM:support@fascinito.in}
+    properties:
+      mail:
+        smtp:
+          auth: true
+          socketFactory:
+            port: 465
+            class: javax.net.ssl.SSLSocketFactory
+            fallback: false
+          starttls:
+            enable: false
+
 server:
   port: ${SERVER_PORT:8080}
   servlet:
